--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+@layer utilities {
+  .tb-stud {
+    writing-mode: sideways-lr;
+    vertical-align: initial;
+  }
+}
+
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -17,6 +24,6 @@
 }
 
 body {
-  color: "white";
+  color: 'white';
 }
 
